--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
-title: "My Blogs Name"
+title: "Goblin Talks PC Games"
 author: "Default Author Name"
 description: "Some short description of your blog can go here." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
 email: "example@mail.com"
-twitter_username: "twitteruser"
+twitter_username: "@sevastromo"
 github_username: "githubuser"
 linkedin_username: "linkedinuser"
 #facebook_username: username
