--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 title: "Goblin Talks PC Games"
-author: "Default Author Name"
-description: "Some short description of your blog can go here." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
+author: "Sevastromo"
+description: "A PC game enthusiast discusses games on occassion" # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
 #email: "example@mail.com"
 twitter_username: "sevastromo"
-github_username: "Sevastromo"
+github_username: "sevastromo"
 #linkedin_username: "linkedinuser"
 #facebook_username: username
 #flickr_username: username
