--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: "Goblin Talks PC Games"
-author: "Sevastromo"
-description: "A PC game enthusiast discusses PC games on occassion" # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
+title: "A Goblin Talks PC Games"
+author: "Seva"
+description: "I’m not gonna be buried in a grave. When I’m dead, just throw me in the trash." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
