--- a/_config.yml
+++ b/_config.yml
@@ -33,6 +33,10 @@ plugins:
 titles_from_headings:
   strip_title: true
   collections: true
+  
+header_pages:
+  - about.md
+  - archive.md
 
 defaults:
   - scope:
