--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,8 @@ kramdown:
 plugins:
   - jekyll-feed
   - jekyll-sitemap
+  
+google_analytics: G-45R5LED7EQ
 
 titles_from_headings:
   strip_title: true
