--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "A goblin scrawls about PC games"
+title: "A Goblin Talks PC Games"
 author: "Seva"
 description: "I’m not gonna be buried in a grave. When I’m dead, just throw me in the trash." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
