--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ description: "I’m not gonna be buried in a grave. When I’m dead, just throw 
 #email: "example@mail.com"
 twitter_username: "sevastromo"
 github_username: "sevastromo"
+steam_username: "jonesythecat"
 #linkedin_username: "linkedinuser"
 #facebook_username: username
 #flickr_username: username
