--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: "A Goblin Talks PC Games"
-author: "Seva"
+author: "Sevastromo"
 description: "I’m not gonna be buried in a grave. When I’m dead, just throw me in the trash." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
 # Email / Social media user names used by the minima theme:
