--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: "A Goblin Talks PC Games"
+title: "BloGoblin"
 author: "Sevastromo"
-description: "I’m not gonna be buried in a grave. When I’m dead, just throw me in the trash." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
+description: "A PC game enthusiast's thoughts, experiences, and opnions on whatever they're playing at the moment." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
