--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "BlɒGoblin"
+title: "bläGä-blən"
 author: "Sevastromo"
 description: "A PC game enthusiast's thoughts, experiences, and opnions on whatever they're playing at the moment." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
