--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,9 @@
-title: "bläGä-blən"
-author: "Sevastromo"
-description: "A PC game enthusiast's thoughts, experiences, and opnions on whatever they're playing at the moment." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
+title: bläGä-blən
+subtitle: A Goblin Talks PC Games
+logo: logo.png
+banner: banner.png
+author: Sevastromo
+description: A PC game enthusiast's thoughts, experiences, and opnions on whatever they're playing at the moment. # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
